# game-engine

./: CMakeLists.txt  Color.cpp  Color.h  Events.cpp  Events.h  GameRenderer.cpp  GameRenderer.h  Makefile  Map.h  Scene.cpp  Scene.h  StaticMap.cpp  StaticMap.h  StaticSprite.cpp  StaticSprite.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Workspace.cpp  Workspace.h  main.cpp  path.cmake  readme.md
assets/: world.tid
src/: Camera.h  Collision.cpp  Collision.h  Events.cpp  Events.h  FPS.cpp  Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  Sprite.h  SpriteBase.cpp  SpriteBase.h  StaticMap.cpp  StaticSprite.cpp  StaticSprite.h  Texture.cpp  Tile.h  TileMap.cpp  TileMap.h  Workspace.cpp  Workspace.h  WorldMap.cpp  WorldMap.h
src/Misc/: Camera.cpp  Camera.h  Events.cpp  Events.h
src/Rendering/: Collision.cpp  Collision.h  FPS.cpp  FPS.h  GameRenderer.cpp  GameRenderer.h  Rectangle.cpp  Rectangle.h  Tile.cpp  Tile.h  Workspace.cpp  Workspace.h
src/Sprite/: Sprite.h  SpriteBase.cpp  SpriteBase.h  StaticSprite.cpp  StaticSprite.h
src/States/: Node.h  Setup.cpp  Setup.h  SetupComputer.cpp  SetupComputer.h  SetupPlayer.cpp  SetupPlayer.h  StateManager.cpp  StateManager.h  War.cpp  War.h
